Fixed scrollbar overlapping with form when vertical scroll necessary

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,19 @@ main > div > img {
     background: black;
 }
 
+menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: auto;
+    overflow-x: hidden;
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding: 0;
+    margin: 0;
+    width: 780px;
+}
+
 form {
     display: grid;
     grid-template: 155px / repeat(4, auto);
@@ -45,8 +58,9 @@ form {
     grid-gap: 20px;
     text-align: center;
     margin: 8px;
-    padding-bottom: 10px;
-    overflow-y: auto;
+    padding: 0 20px 10px 20px;
+    overflow-y: visible;
+    overflow-x: hidden;
     flex-basis: auto;
     flex-grow: 1;
     flex-shrink: 1;
@@ -120,9 +134,15 @@ h1 {
         height: auto;
         grid-template: 155px 155px / 1fr;
         grid-auto-flow: column;
-        overflow: scroll;
+        overflow: auto;
+        padding: 0 0 5px 0;
         flex-grow: 0;
         flex-shrink: 0;
         grid-gap: 10px;
+    }
+
+    menu {
+        width: 100%;
+        overflow-x: scroll;
     }
 }
